--- a/index.html
+++ b/index.html
@@ -8,11 +8,14 @@
 </head>
 <body>
     <h1>To-Do List</h1>
+    
     <div class="input-section">
         <input type="text" id="task" placeholder="Add a new task">
         <button onclick="addTask()">Add</button>
     </div>
+    <div class="alert" id="alert-box"></div>
     <ul id="task-list"></ul>
     <script src="script.js"></script>
+    
 </body>
 </html>
